--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 **.fls
 **.log
 **/VectorizedMultiAgentSimulator/
+**/gym-simplegrid/
+**/gym-multigrid/
 **/vcpkg/
 **/marl_env/
 **/wheel-*-py3-none-any.whl
